# citinet-client

./: .gitignore  ARCHITECTURE.md  CODE_SIGNING.md  Citinet-Engine-First-Plan-AGENT.md  INFRASTRUCTURE.md  LICENSE  PRIVACY.md  README.md  SESSION-2026-02-22.md  index.html  package-lock.json  package.json  ticklish-tinkering-lemon.md
.claude/: settings.local.json
docs/adr/: ADR-000-repo-survey.md  ADR-001-mvp-transformation.md
src/: App.tsx  main.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  docker_manager.rs  hub_api.rs  hub_service.rs  lib.rs  storage_manager.rs  system_monitor.rs  tailscale_manager.rs  tunnel_manager.rs
src-tauri/wix/: preuninstall.wxs
src/api/: tauri.ts
src/components/: LoginScreen.tsx
src/components/dashboard/: AdminPanel.tsx  CommunityPanel.tsx  ContributionCard.tsx  Dashboard.tsx  FilesPanel.tsx  HelpPanel.tsx  ImpactCard.tsx  MetricsPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusCard.tsx
src/components/onboarding/: CommunityPanel.tsx  ContributionSlider.tsx  CreateProfile.tsx  IdentityKeys.tsx  NetworkCheck.tsx  Onboarding.tsx  OnboardingLayout.tsx  ReadyPanel.tsx  WelcomePanel.tsx
src/components/ui/: Button.tsx  Card.tsx  ProgressBar.tsx  Toggle.tsx
src/components/wizard/: AdminAccountStep.tsx  CompleteStep.tsx  ContributionSlider.tsx  LicenseStep.tsx  LocationStep.tsx  NodeIdentityStep.tsx  ProgressStep.tsx  ServiceStep.tsx  SuccessStep.tsx  TunnelStep.tsx  WelcomeStep.tsx  Wizard.tsx  WizardLayout.tsx
src/lib/: features.test.ts  features.ts
src/stores/: appStore.ts  authStore.ts  configStore.ts  onboardingStore.ts  wizardStore.ts
