[package]
name = "citinet"
version = "0.1.0"
description = "Citinet — People-Powered Cloud"
authors = ["Citinet"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
sysinfo = "0.32"
tokio = { version = "1.43", features = ["full"] }
mdns-sd = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
